Bug fixes and improvements

--- a/BWJ.Core.Web.TypeScriptGen/BWJ.Core.Web.TypeScriptGen.csproj
+++ b/BWJ.Core.Web.TypeScriptGen/BWJ.Core.Web.TypeScriptGen.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Authors>Byron W Jones</Authors>
+    <Company>BWJ LLC</Company>
+    <Version>1.1.0</Version>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
